--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -9,11 +9,66 @@
     android:orientation="vertical"
     android:gravity="center_vertical">
     
-    <LinearLayout
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="273dp"
-        android:layout_height="413dp"
-        android:layout_gravity="center">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="vertical">
 
-    </LinearLayout>
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/logo"
+            android:layout_marginBottom="10dp"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/main_black"
+            android:fontFamily="@font/poppinsbold"
+            android:text="Bem vindo ao  Smart Locker!"
+            android:textAlignment="center"
+            android:textSize="26sp"
+            android:lineHeight="26sp"
+            android:layout_marginBottom="10dp"/>
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/main_black"
+            android:fontFamily="@font/robotoregular"
+            android:textAlignment="center"
+            android:text="Comece a utilizar os melhores armários do Brasil."
+            android:textSize="17sp"
+            android:lineHeight="25sp"
+            android:layout_marginBottom="20dp"/>
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="132dp"
+                android:layout_height="51dp"
+                android:text="Login"
+                android:fontFamily="@font/robotobold"
+                android:textSize="17sp"
+                android:textAllCaps="false"
+                android:background="@color/main_blue"
+                android:textColor="@color/white"
+                />
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="132dp"
+                android:layout_height="51dp"
+                android:text="Cadastro"
+                android:fontFamily="@font/robotobold"
+                android:textSize="17sp"
+                android:textAllCaps="false"
+                android:textColor="@color/main_blue"
+                android:background="@drawable/borda_btn_secundario"/>
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
