--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    tools:viewBindingIgnore="false"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -7,7 +8,8 @@
     android:layout_height="match_parent"
     tools:context=".InicioActivity"
     android:orientation="vertical"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    >
     
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="273dp"
@@ -59,6 +61,7 @@
                 android:textColor="@color/white"
                 />
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnCadastro"
                 android:layout_width="132dp"
                 android:layout_height="51dp"
                 android:text="Cadastro"
@@ -66,7 +69,7 @@
                 android:textSize="17sp"
                 android:textAllCaps="false"
                 android:textColor="@color/main_blue"
-                android:background="@drawable/borda_btn_secundario"/>
+                />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
