--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -36,6 +36,7 @@
             android:text="@string/cadastro_campos"
             android:layout_marginBottom="26dp"/>
         <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/cadastro_editTextNome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/robotoregular"
@@ -46,6 +47,7 @@
             android:textSize="14dp"
             android:background="@drawable/borda_edittextfield"/>
         <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/cadastro_editTextCPF"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/robotoregular"
@@ -57,6 +59,7 @@
             android:inputType="number"
             android:background="@drawable/borda_edittextfield"/>
         <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/cadastro_editTextEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/robotoregular"
@@ -71,30 +74,35 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginBottom="15dp">
+
             <androidx.appcompat.widget.AppCompatEditText
-                android:layout_width="wrap_content"
+                android:id="@+id/cadastro_editTextCelular"
+                android:layout_width="155dp"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/borda_edittextfield"
                 android:fontFamily="@font/robotoregular"
                 android:hint="Numero de celular"
-                android:textSize="14dp"
-                android:textColor="@color/main_black"
-                android:padding="14dp"
                 android:inputType="phone"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/borda_edittextfield"/>
-            <androidx.appcompat.widget.AppCompatEditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/robotoregular"
-                android:hint="Data de nascimento"
-                android:textColor="@color/main_black"
                 android:padding="14dp"
-                android:textSize="14dp"
+                android:textColor="@color/main_black"
+                android:textSize="14dp" />
+
+            <androidx.appcompat.widget.AppCompatEditText
+                android:id="@+id/cadastro_editTextDataNasc"
+                android:layout_width="108dp"
+                android:layout_height="match_parent"
+                android:background="@drawable/borda_edittextfield"
+                android:fontFamily="@font/robotoregular"
+                android:hint="Data Nasc."
                 android:inputType="date"
-                android:background="@drawable/borda_edittextfield"/>
+                android:padding="14dp"
+                android:textColor="@color/main_black"
+                android:textSize="14dp" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/cadastro_editTextCriarSenha"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/robotoregular"
@@ -106,6 +114,7 @@
             android:textColor="@color/main_black"
             android:background="@drawable/borda_edittextfield"/>
         <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/cadastro_editTextConfirmeSenha"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/robotoregular"
@@ -117,6 +126,7 @@
             android:inputType="textPassword"
             android:background="@drawable/borda_edittextfield"/>
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_CriarConta"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bordar_btnprincipal"
