Criado o tema do projeto para o uso nas views

--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -18,137 +18,92 @@
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/poppinsbold"
-            android:textSize="24dp"
-            android:lineHeight="26dp"
             android:text="Comece por aqui"
-            android:textColor="@color/main_black"
-
-            />
+            style="@style/mainTitle" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/robotoregular"
-            android:textSize="17dp"
-            android:lineHeight="25dp"
-            android:textColor="@color/main_black"
             android:text="@string/cadastro_campos"
-            android:layout_marginBottom="26dp"/>
+            style="@style/subTitle" />
+
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/cadastro_editTextNome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/robotoregular"
             android:hint="Nome completo"
-            android:textColor="@color/main_black"
-            android:layout_marginBottom="15dp"
-            android:padding="14dp"
-            android:textSize="14dp"
-            android:background="@drawable/borda_edittextfield"/>
+            style="@style/ImputFormStyle" />
+
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/cadastro_editTextCPF"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/robotoregular"
             android:hint="CPF"
-            android:textColor="@color/main_black"
-            android:layout_marginBottom="15dp"
-            android:padding="14dp"
-            android:textSize="14dp"
-            android:inputType="number"
-            android:background="@drawable/borda_edittextfield"/>
+            style="@style/ImputFormStyle" />
+
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/cadastro_editTextEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/robotoregular"
             android:hint="Email"
-            android:textColor="@color/main_black"
-            android:layout_marginBottom="15dp"
-            android:padding="14dp"
-            android:textSize="14dp"
-            android:background="@drawable/borda_edittextfield"/>
+            style="@style/ImputFormStyle" />
+
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="15dp">
+            android:orientation="horizontal">
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/cadastro_editTextCelular"
                 android:layout_width="155dp"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
-                android:background="@drawable/borda_edittextfield"
-                android:fontFamily="@font/robotoregular"
-                android:hint="Numero de celular"
+                android:hint="Número de celular"
                 android:inputType="phone"
-                android:padding="14dp"
-                android:textColor="@color/main_black"
-                android:textSize="14dp" />
+                style="@style/ImputFormStyle" />
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/cadastro_editTextDataNasc"
                 android:layout_width="108dp"
                 android:layout_height="match_parent"
-                android:background="@drawable/borda_edittextfield"
-                android:fontFamily="@font/robotoregular"
                 android:hint="Data Nasc."
                 android:inputType="date"
-                android:padding="14dp"
-                android:textColor="@color/main_black"
-                android:textSize="14dp" />
+                style="@style/ImputFormStyle" />
+
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/cadastro_editTextCriarSenha"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/robotoregular"
-            android:hint="Crie uma senha"
-            android:layout_marginBottom="15dp"
-            android:padding="14dp"
-            android:textSize="14dp"
+            android:hint="Senha"
             android:inputType="textPassword"
-            android:textColor="@color/main_black"
-            android:background="@drawable/borda_edittextfield"/>
+            style="@style/ImputFormStyle" />
+
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/cadastro_editTextConfirmeSenha"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/robotoregular"
-            android:hint="Confirme sua senha"
+            android:hint="Confirmar senha"
             android:layout_marginBottom="26dp"
-            android:textColor="@color/main_black"
-            android:padding="14dp"
-            android:textSize="14dp"
             android:inputType="textPassword"
-            android:background="@drawable/borda_edittextfield"/>
+            style="@style/ImputFormStyle" />
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_CriarConta"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/bordar_btnprincipal"
-            android:textColor="@color/white"
-            android:textSize="17dp"
-            android:fontFamily="@font/robotobold"
             android:text="Criar conta"
-            android:textAllCaps="false"
-            android:layout_marginBottom="15dp"/>
+            android:layout_marginBottom="15dp"
+            style="@style/btnPrimary" />
+
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/cadastro_tenhoOutraConta"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/cadastro_tenhoOutraConta"
-            android:fontFamily="@font/robotobold"
-            android:textColor="@color/main_blue"/>
-
-
-
+            style="@style/btnHyperLink" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
-        
-    
 
 </androidx.appcompat.widget.LinearLayoutCompat>
