--- a/app/src/main/res/drawable/contorno_btnsecundario.xml
+++ b/app/src/main/res/drawable/contorno_btnsecundario.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
+    <item android:state_enabled="true">
         <shape android:shape="rectangle">
             <solid android:color="@color/white"/>
-            <corners android:radius="10dp"/>
-            <stroke android:color="#e1e1e1" android:width="1dp"/>
+            <corners android:radius="5dp"/>
+            <stroke android:color="@color/main_blue" android:width="2dp"/>
         </shape>
     </item>
 </selector>
