--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -36,6 +36,7 @@
             android:textSize="26sp"
             android:lineHeight="26sp"
             android:layout_marginBottom="10dp"/>
+
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -46,30 +47,42 @@
             android:textSize="17sp"
             android:lineHeight="25sp"
             android:layout_marginBottom="20dp"/>
+
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:gravity="center">
+
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="132dp"
                 android:layout_height="51dp"
                 android:text="Login"
-                android:fontFamily="@font/robotobold"
-                android:textSize="17sp"
-                android:textAllCaps="false"
-                android:background="@color/main_blue"
-                android:textColor="@color/white"
-                />
+                android:layout_marginEnd="8dp"
+                style="@style/btnPrimary"/>
+
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnCadastro"
                 android:layout_width="132dp"
                 android:layout_height="51dp"
                 android:text="Cadastro"
-                android:fontFamily="@font/robotobold"
-                android:textSize="17sp"
-                android:textAllCaps="false"
-                android:textColor="@color/main_blue"
-                />
+                style="@style/btnSecundary"/>
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="15dp">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/inicio_visitante"
+                style="@style/btnHyperLink"/>
+
         </androidx.appcompat.widget.LinearLayoutCompat>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
