--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+    <!-- Tema base Android -->
     <style name="Theme.smartlocker" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/main_blue</item>
         <item name="colorPrimaryVariant">@color/main_blue</item>
@@ -11,5 +11,63 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <!-- Estilos para os inputs que entram dados -->
+    <!-- Usaremos para AppCompatEditText -->
+    <style name="ImputFormStyle" parent="Widget.AppCompat.EditText">
+        <item name="android:fontFamily">@font/robotoregular</item>
+        <item name="android:textColorHint">#4D000000</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:background">@drawable/borda_edittextfield</item>
+        <item name="android:layout_marginBottom">15dp</item>
+        <item name="android:padding">14dp</item>
+        <item name="android:popupElevation">12dp</item>
+    </style>
+
+    <!-- Título principal para inícios de tela -->
+    <!-- Usaremos para AppCompatTextView -->
+    <style name="mainTitle" parent="Widget.AppCompat.TextView">
+        <item name="android:fontFamily">@font/poppinsbold</item>
+        <item name="android:textColor">@color/main_black</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:lineHeight">26dp</item>
+    </style>
+
+    <!-- Sub títulos, legendas para os grandes títulos -->
+    <!-- Usaremos para AppCompatTextView -->
+    <style name="subTitle" parent="Widget.AppCompat.TextView">
+        <item name="android:fontFamily">@font/robotoregular</item>
+        <item name="android:textColor">@color/main_black</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:lineHeight">25dp</item>
+        <item name="android:layout_marginBottom">26dp</item>
+    </style>
+
+    <!-- Botões principais de confirmação -->
+    <!-- Usaremos para AppCompatButton -->
+    <style name="btnPrimary" parent="Widget.AppCompat.Button">
+        <item name="android:fontFamily">@font/robotobold</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:background">@drawable/bordar_btnprincipal</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <!-- Botões secundários -->
+    <!-- Usaremos para AppCompatButton -->
+    <style name="btnSecundary" parent="Widget.AppCompat.Button">
+        <item name="android:fontFamily">@font/robotobold</item>
+        <item name="android:textColor">@color/main_blue</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:background">@drawable/contorno_btnsecundario</item>
+    </style>
+
+    <!-- Botões de "hyper link" -->
+    <!-- Usaremos para AppCompatTextView -->
+    <style name="btnHyperLink" parent="Widget.AppCompat.TextView">
+        <item name="android:fontFamily">@font/robotobold</item>
+        <item name="android:textColor">@color/main_blue</item>
     </style>
 </resources>
