--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -8,8 +8,7 @@
     android:layout_height="match_parent"
     tools:context=".InicioActivity"
     android:orientation="vertical"
-    android:gravity="center_vertical"
-    >
+    android:gravity="center_vertical">
     
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="273dp"
@@ -24,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             app:srcCompat="@drawable/logo"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="10dp" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
@@ -35,7 +34,7 @@
             android:textAlignment="center"
             android:textSize="26sp"
             android:lineHeight="26sp"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="10dp" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
@@ -46,7 +45,7 @@
             android:text="Comece a utilizar os melhores armários do Brasil."
             android:textSize="17sp"
             android:lineHeight="25sp"
-            android:layout_marginBottom="20dp"/>
+            android:layout_marginBottom="20dp" />
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
@@ -59,14 +58,14 @@
                 android:layout_height="51dp"
                 android:text="Login"
                 android:layout_marginEnd="8dp"
-                style="@style/btnPrimary"/>
+                style="@style/btnPrimary" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnCadastro"
                 android:layout_width="132dp"
                 android:layout_height="51dp"
                 android:text="Cadastro"
-                style="@style/btnSecundary"/>
+                style="@style/btnSecundary" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -81,7 +80,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/inicio_visitante"
-                style="@style/btnHyperLink"/>
+                style="@style/btnHyperLink" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
