--- a/app/src/main/res/layout/activity_recuperar_senha.xml
+++ b/app/src/main/res/layout/activity_recuperar_senha.xml
@@ -34,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email"
-            style="@style/ImputFormStyle" />
+            style="@style/InputFormStyle" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/recuperar_btnRecuperar"
