Melhoria na declaração de uma view

--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -57,7 +57,7 @@
                 android:id="@+id/cadastro_editTextCelular"
                 android:layout_width="155dp"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
+                android:layout_marginEnd="10dp"
                 android:hint="Número de celular"
                 android:inputType="phone"
                 style="@style/InputFormStyle" />
