--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -70,4 +70,11 @@
         <item name="android:fontFamily">@font/robotobold</item>
         <item name="android:textColor">@color/main_blue</item>
     </style>
+
+    <!-- Estilo para o Spinner -->
+    <style name="SpinnerStyle" parent="Widget.AppCompat.Spinner">
+        <item name="android:fontFamily">@font/robotobold</item>
+        <item name="android:spinnerMode">dropdown</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
