Criar layout da tela "Gerar QRcode" Adicionar id no imageView, que será usado para plotar o QRcode

--- a/app/src/main/res/layout/activity_gerar_qrcode.xml
+++ b/app/src/main/res/layout/activity_gerar_qrcode.xml
@@ -29,6 +29,7 @@
             />
 
         <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/gerarqrcode_ImageView"
             android:layout_width="273dp"
             android:layout_height="300dp"/>
 
