--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -9,7 +9,7 @@
     tools:context=".InicioActivity"
     android:orientation="vertical"
     android:gravity="center_vertical">
-    
+
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="273dp"
         android:layout_height="wrap_content"
@@ -53,7 +53,7 @@
             android:gravity="center">
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnLogin"
+                android:id="@+id/btnLogar"
                 android:layout_width="132dp"
                 android:layout_height="51dp"
                 android:text="Login"
