--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,88 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <!-- Layout principal -->
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_margin="30dp"
+    android:gravity="center"
     tools:context=".LoginActivity">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="33sp"
-        android:text="Acesse sua conta"
-        style="@style/mainTitle" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Preencha com seus dados"
-        style="@style/subTitle" />
-
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/cpfInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="CPF"
-        style="@style/ImputFormStyle" />
-
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/passInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Senha"
-        android:inputType="textPassword"
-        style="@style/InputFormStyle" />
-
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnLogar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Logar"
-        android:layout_marginTop="15dp"
-        style="@style/btnPrimary" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnVisitante"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Acessar como visitante"
-        android:layout_marginTop="10dp"
-        style="@style/btnSecundary" />
-
-
-    <!-- Botões secundários -->
     <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:layout_marginTop="15dp">
-
-        <!-- Usar layout_weight="1" para ocupar 50% da View pai -->
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/btnRecoveryPassword"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Esqueci minha senha"
-            android:textAlignment="center"
-            style="@style/btnHyperLink" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/btnCreateAccount"
-            android:layout_width="0dp"
+            android:id="@+id/teste"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Não tenho conta"
-            android:textAlignment="center"
-            style="@style/btnHyperLink" />
+            android:textSize="33sp"
+            android:text="Acesse sua conta"
+            style="@style/mainTitle" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Preencha com seus dados"
+            style="@style/subTitle" />
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/cpfInput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="CPF"
+            style="@style/InputFormStyle" />
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/passInput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Senha"
+            android:inputType="textPassword"
+            style="@style/InputFormStyle" />
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnLogar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Logar"
+            android:layout_marginTop="15dp"
+            style="@style/btnPrimary" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnVisitante"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Acessar como visitante"
+            android:layout_marginTop="10dp"
+            style="@style/btnSecundary" />
+
+        <!-- Botões secundários -->
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_marginTop="15dp">
+
+            <!-- Usar layout_weight="1" para ocupar 50% da View pai -->
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/btnRecoveryPassword"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Esqueci minha senha"
+                android:textAlignment="center"
+                style="@style/btnHyperLink" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/btnCreateAccount"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Não tenho conta"
+                android:textAlignment="center"
+                style="@style/btnHyperLink" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
