--- a/app/src/main/res/layout/activity_recuperar_senha.xml
+++ b/app/src/main/res/layout/activity_recuperar_senha.xml
@@ -38,7 +38,7 @@
             android:padding="14dp"
             android:textSize="14dp"
             android:textColor="@color/main_black"
-            android:background="@drawable/contorno_edittextfield"/>
+            android:background="@drawable/contorno_edittextfield"
             style="@style/InputFormStyle" />
 
         <androidx.appcompat.widget.AppCompatButton
