Correção de bugs

--- a/app/src/main/res/layout/activity_rent_locker.xml
+++ b/app/src/main/res/layout/activity_rent_locker.xml
@@ -161,7 +161,7 @@
                     android:textAlignment="center"
                     android:textSize="18sp"
                     android:textStyle="bold"
-                    android:text="Aviso de atenção"
+                    android:text="Atenção"
                     android:fontFamily="@font/poppinsbold"
                     android:textColor="#383636"/>
 
