--- a/app/src/main/res/layout/activity_change.xml
+++ b/app/src/main/res/layout/activity_change.xml
@@ -13,30 +13,34 @@
         style="@style/mainTitle"
         android:layout_width="332dp"
         android:layout_height="57dp"
+        android:layout_marginTop="64dp"
         android:lineHeight="26dp"
-        android:text="Adicione um cartão de crédito"
-        tools:layout_editor_absoluteX="39dp"
-        tools:layout_editor_absoluteY="85dp" />
+        android:text="Vamos usar um cartão de crédito"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/appCompatTextView5"
-            style="@style/subTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/cadastro_campos"
-            app:layout_constraintStart_toStartOf="@+id/appCompatTextView3"
-            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />
+        android:id="@+id/appCompatTextView5"
+        style="@style/subTitle"
+        android:layout_width="332dp"
+        android:layout_height="46dp"
+        android:text="@string/cadastro_cartao"
+        app:layout_constraintStart_toStartOf="@+id/appCompatTextView3"
+        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/linearLayoutCompat"
         android:layout_width="333dp"
         android:layout_height="360dp"
+        android:layout_marginTop="32dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="185dp">
+        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView5">
 
         <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/recuperar_editTextEmail"
+            android:id="@+id/etCardNumber"
             style="@style/InputFormStyle"
             android:layout_width="335dp"
             android:layout_height="43.87dp"
@@ -51,7 +55,7 @@
             app:layout_constraintTop_toBottomOf="@+id/appCompatTextView5" />
 
         <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/recuperar_editTextEmail"
+            android:id="@+id/etCardCpf"
             style="@style/InputFormStyle"
             android:layout_width="335dp"
             android:layout_height="43.87dp"
@@ -66,7 +70,7 @@
             tools:layout_editor_absoluteY="391dp" />
 
         <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/recuperar_editTextEmail"
+            android:id="@+id/etCardCvv"
             style="@style/InputFormStyle"
             android:layout_width="335dp"
             android:layout_height="43.87dp"
@@ -80,7 +84,7 @@
             tools:layout_editor_absoluteY="326dp" />
 
         <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/recuperar_editTextEmail"
+            android:id="@+id/etCardExpirity"
             style="@style/InputFormStyle"
             android:layout_width="335dp"
             android:layout_height="43.87dp"
@@ -94,7 +98,7 @@
             tools:layout_editor_absoluteY="326dp" />
 
         <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/recuperar_editTextEmail"
+            android:id="@+id/etCardHolder"
             style="@style/InputFormStyle"
             android:layout_width="335dp"
             android:layout_height="43.87dp"
@@ -109,7 +113,7 @@
             tools:layout_editor_absoluteY="263dp" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/recuperar_btnRecuperar"
+            android:id="@+id/btnCardConfirm"
             style="@style/btnPrimary"
             android:layout_width="335dp"
             android:layout_height="wrap_content"
@@ -126,9 +130,11 @@
         style="@style/btnHyperLink"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:text="@string/cancelar_cartao"
-        tools:layout_editor_absoluteX="177dp"
-        tools:layout_editor_absoluteY="562dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
