Correçao de bugs - Botoes nao estavam funcionando
commit final juro

--- a/app/src/main/res/layout/activity_recuperar_senha.xml
+++ b/app/src/main/res/layout/activity_recuperar_senha.xml
@@ -59,12 +59,14 @@
             android:orientation="horizontal">
 
             <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/recuperarVoltarLogin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/recuperar_voltarLogin"
                 style="@style/btnHyperLink" />
 
             <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/recuperarVoltarCadastro"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
