--- a/app/src/main/res/layout/activity_gerar_qrcode.xml
+++ b/app/src/main/res/layout/activity_gerar_qrcode.xml
@@ -25,19 +25,29 @@
             android:text="Apresente o qrCode para o gerente da unidade"
             android:textAllCaps="true"
             android:textColor="@color/main_black"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            />
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/gerarqrcode_ImageView"
             android:layout_width="273dp"
-            android:layout_height="300dp" />
+            android:layout_height="300dp"/>
 
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Voltar"
-            style="@style/btnHyperLink" />
+            android:fontFamily="@font/robotobold"
+            android:textColor="@color/main_blue"
+            android:textSize="16dp"
+            />
+        
+
+
+
+
 
     </androidx.appcompat.widget.LinearLayoutCompat>
+
+
 
 </androidx.appcompat.widget.LinearLayoutCompat>
