--- a/app/src/main/res/layout/activity_rent_locker.xml
+++ b/app/src/main/res/layout/activity_rent_locker.xml
@@ -18,17 +18,17 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/mapa_teste"
-            android:scaleType="fitXY"/> <!-- Tag usada para ajustar a escala e preencher espaços vazios -->
+            android:scaleType="fitXY" /> <!-- Tag usada para ajustar a escala e preencher espaços vazios -->
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <!-- Restante dos elementos da tela em uma view -->
     <androidx.appcompat.widget.LinearLayoutCompat
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
         android:layout_margin="30dp">
 
@@ -40,7 +40,7 @@
             android:text="Unidade - Barão Geraldo 1"
             android:layout_gravity="center_horizontal"
             android:fontFamily="@font/poppinsbold"
-            android:textColor="#383636"/>
+            android:textColor="#383636" />
 
         <!-- Uma nova view para centralizar os itens de forma menor -->
         <androidx.appcompat.widget.LinearLayoutCompat
@@ -68,7 +68,7 @@
                     android:layout_height="26dp"
                     android:textSize="18sp"
                     android:textStyle="bold"
-                    android:text="Valores por hora:"
+                    android:text="@string/value_per_hour"
                     android:fontFamily="@font/poppinsbold"
                     android:layout_marginStart="5dp"
                     android:textAlignment="center"
@@ -88,14 +88,14 @@
                         android:text="30 minutos"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/opcaoLocacaoMinuto"
                         android:text="R$10,00"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="right"/>
+                        android:layout_gravity="end" />
                 </TableRow>
 
                 <TableRow>
@@ -103,14 +103,14 @@
                         android:text="1 hora"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/opcaoLocacaoHora"
                         android:text="R$17,50"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="right"/>
+                        android:layout_gravity="end" />
                 </TableRow>
 
                 <TableRow>
@@ -118,14 +118,14 @@
                         android:text="Diária"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/opcaoLocacaoDiaria"
                         android:text="R$60,00"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="right"/>
+                        android:layout_gravity="end" />
                 </TableRow>
 
                 <TableRow>
@@ -133,14 +133,14 @@
                         android:text="Pernoite"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/opcaoLocacaoPernoite"
                         android:text="R$70,00"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="right"/>
+                        android:layout_gravity="end" />
                 </TableRow>
 
             </TableLayout>
@@ -156,7 +156,7 @@
                     android:layout_width="30dp"
                     android:layout_height="match_parent"
                     android:src="@drawable/icon_danger"
-                    android:alpha="0.65"/>
+                    android:alpha="0.65" />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:layout_width="wrap_content"
@@ -165,9 +165,9 @@
                     android:textAlignment="center"
                     android:textSize="18sp"
                     android:textStyle="bold"
-                    android:text="Aviso de atenção"
+                    android:text="@string/info_warning"
                     android:fontFamily="@font/poppinsbold"
-                    android:textColor="#383636"/>
+                    android:textColor="#383636" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -178,16 +178,23 @@
                 android:textSize="12sp"
                 android:text="Ao alugar o espaço, será cobrado o valor da diária como forma de caução. A diferença será estornada na hora do checkout."
                 android:fontFamily="@font/robotomedium"
-                android:textColor="#383636"/>
+                android:textColor="#383636" />
 
-            <!-- Labels de inserção de dados -->
-            <Spinner
-                android:id="@+id/spinnerOpcoesValores"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:prompt="@string/spinner_hint"
-                android:layout_marginTop="10dp"
-                style="@style/InputFormStyle"/>
+                android:layout_height="match_parent">
+
+                <!-- Labels de inserção de dados -->
+                <Spinner
+                    android:id="@+id/spinnerOpcoesValores"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:prompt="@string/spinner_hint"
+                    android:layout_marginTop="22dp"
+                    style="@style/SpinnerStyle" />
+
+            </LinearLayout>
+
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -203,7 +210,7 @@
             android:id="@+id/btnBack"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Voltar"
+            android:text="@string/back"
             android:gravity="center"
             android:layout_marginTop="13dp"
             style="@style/btnHyperLink" />
