Fixed MapsActivity & Mais
MapsActivity alterada de acordo com novo formato de armazenamento das unidades no Firestore.
Agora só mostrará no mapa e no menu inferior unidades que estejam a um raio de X kilometros do usuário (10 por default)

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    tools:viewBindingIgnore="false"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -30,18 +31,19 @@
                 style="@style/mainTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginVertical="2dp"
                 android:text="Encontre o armário mais próximo" />
 
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
                 android:layout_weight="1">
 
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:id="@+id/unity"
                     android:layout_width="match_parent"
-                    android:layout_height="255dp"
+                    android:layout_height="240dp"
                     android:orientation="vertical">
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -52,6 +54,7 @@
                 style="@style/btnHyperLink"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:text="Voltar" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
