Adicionar id com o nome da unidade de locação

--- a/app/src/main/res/layout/activity_rent_locker.xml
+++ b/app/src/main/res/layout/activity_rent_locker.xml
@@ -33,6 +33,7 @@
         android:layout_margin="30dp">
 
         <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/rentlocker_nomeUnidade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
