--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -56,7 +56,7 @@
                 android:id="@+id/btnLogar"
                 android:layout_width="132dp"
                 android:layout_height="51dp"
-                android:text="Login"
+                android:text="Entrar"
                 android:layout_marginEnd="8dp"
                 style="@style/btnPrimary" />
 
@@ -64,7 +64,7 @@
                 android:id="@+id/btnCadastro"
                 android:layout_width="132dp"
                 android:layout_height="51dp"
-                android:text="Cadastro"
+                android:text="Cadastrar-se"
                 style="@style/btnSecundary" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
