--- a/app/src/main/res/layout/activity_rent_locker.xml
+++ b/app/src/main/res/layout/activity_rent_locker.xml
@@ -116,14 +116,14 @@
 
                 <TableRow>
                     <TextView
-                        android:text="Diária"
+                        android:text="4 horas"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/opcaoLocacaoDiaria"
-                        android:text="R$60,00"
+                        android:text="R$40,00"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="end" />
@@ -131,7 +131,7 @@
 
                 <TableRow>
                     <TextView
-                        android:text="Pernoite"
+                        android:text="Diária"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textStyle="bold" />
@@ -177,7 +177,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:textSize="12sp"
-                android:text="Ao alugar o espaço, será cobrado o valor da diária como forma de caução. A diferença será estornada na hora do checkout."
+                android:text="@string/info_warning_text"
                 android:fontFamily="@font/robotomedium"
                 android:textColor="#383636" />
 
